--- a/index.html
+++ b/index.html
@@ -1,10 +1,27 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-<title>Page Title</title>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
+    <title></title>
 </head>
 <body>
-<h1>This is a Heading</h1>
-<p>This is a paragraph.</p>
+   
+        <header>
+           
+        </header>
+        <main>
+            <nav>
+                <ul >
+                    <li></li>
+					<li></li>
+					<li></li>
+                </ul>
+            </nav>
+        <footer>
+        </footer>
+    </div>
 </body>
 </html>
