fix: change of the index.html stracture

--- a/index.html
+++ b/index.html
@@ -5,23 +5,24 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <title></title>
+    <title>s</title>
 </head>
 <body>
    
         <header>
-           
+           s
         </header>
         <main>
             <nav>
                 <ul >
-                    <li></li>
-					<li></li>
-					<li></li>
+                    <li>s</li>
+					<li>x</li>
+					<li>z</li>
                 </ul>
             </nav>
         <footer>
+            x
         </footer>
-    </div>
+        </main>
 </body>
 </html>
