--- a/index.html
+++ b/index.html
@@ -71,16 +71,16 @@
             <section class="section" id="code-example">
                 <h2>Code Example</h2>
                 <code>
-                    function disemvowel(str) {
-                        let vowel_list = 'aeiouAEIOU';
-                        let newString = '';
-                        for(let i = 0; i &lt str.length; i++) {
-                            if (vowel_list.indexOf(str[i]) === -1) {
-                                newString += str[i];
-                            }
+                    <pre>
+                        function nthFibo(n) {
+                        if (n == 1) {
+                            return 0;
+                        } else if (n == 2 || n ==3) {
+                            return 1;
+                        } else {
+                            return nthFibo(n - 1) + nthFibo(n - 2);
                         }
-                        return newString;
-                    }
+                    }</pre>
                 </code>
             </section>
 
