--- a/index.html
+++ b/index.html
@@ -70,8 +70,9 @@
 
             <section class="section" id="code-example">
                 <h2>Code Example</h2>
+                <pre>
                 <code>
-                    <pre>
+                    
                         function nthFibo(n) {
                         if (n == 1) {
                             return 0;
@@ -80,8 +81,9 @@
                         } else {
                             return nthFibo(n - 1) + nthFibo(n - 2);
                         }
-                    }</pre>
+                    }
                 </code>
+            </pre>
             </section>
 
             <section class="section" id="languages">
