feat: add Welcome section

--- a/index.html
+++ b/index.html
@@ -25,8 +25,16 @@
                 <div class="wrapper_icon">
                     <section class="icon_profile"><img src="./assets/icon_profile.png" alt="Profile Icon"></section>
                 </div>
-            
         </div>
     </header>
+    <main class="main">
+        <div class ="wrapper_welcome">
+            <section class="welcome_img"><img src="./assets/Welcome_sec.png" alt="Library"></section>
+            <div class ="background_container">
+                <section class="section" id="welcome-headline">Welcome<br> to the Brooklyn<br> Library</section>
+            </div>
+           </div>
+           
+    </main>
 </body>
 </html>
