feat: add About section

--- a/index.html
+++ b/index.html
@@ -34,7 +34,20 @@
                 <section class="section" id="welcome-headline">Welcome<br> to the Brooklyn<br> Library</section>
             </div>
            </div>
-           
+           <div class ="about_welcome">
+           <section class="section_title" id="about-headline"><h2>About</h2></section>
+           </div>
+           <section class="about-text"><p>The Brooklyn Library is a free workspace, a large number of books and a cozy coffee shop inside </p></section>
+           <div class="about_images_wrapper">
+            <section class="icon_profile"><img src="./assets/image1_about.png" alt="Girl in Library"></section>
+            <section class="icon_profile"><img src="./assets/image2_about.png" alt="Profile Icon"></section>
+            <section class="icon_profile"><img src="./assets/image3_about.png" alt="Profile Icon"></section>
+           </div>
+           <a class="wrapper_pagination">
+            <div class="slide_pagination"></div>
+            <div class="slide_pagination"></div>
+            <div class="slide_pagination"></div>
+           </a>
     </main>
 </body>
 </html>
