fix: add image 4 and 5, create squared click zone of the pagination buttons

--- a/index.html
+++ b/index.html
@@ -44,9 +44,15 @@
             <section class="icon_profile"><img src="./assets/image3_about.png" alt="Profile Icon"></section>
            </div>
            <a class="wrapper_pagination">
+            <div class="square_click-zone">
             <div class="slide_pagination"></div>
+        </div>
+        <div class="square_click-zone">
             <div class="slide_pagination"></div>
+        </div>
+        <div class="square_click-zone">
             <div class="slide_pagination"></div>
+        </div>
            </a>
     </main>
 </body>
