feat: Add Coffee Shop section

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
 
     <header class="header">
-            <div class="container">
+                <div class="container">
                 <div class="wrapper_headline_nav-list">
                 <section class="section" id="library-headline"><h1>Brooklyn Public Library</h1></section>
                 <nav class="nav">
@@ -25,7 +25,7 @@
                 <div class="wrapper_icon">
                     <section class="icon_profile"><img src="./assets/icon_profile.png" alt="Profile Icon"></section>
                 </div>
-        </div>
+            </div>
     </header>
     <main class="main">
         <div class ="wrapper_welcome">
@@ -131,6 +131,86 @@
         <button class="buy-book_button" id="item">Buy</button>
         <section class=book id="fourth_book"><img src="./assets/book_4.png" alt="The Last Queen"></section>
 </div>
+            </div>
+            <div class ="coffee_wrapper">
+                <section class="section_title" id="coffee-headline"><h2>Coffee Shop</h2></section>
+            <div class=coffee-text-wrapper>
+                <section class="coffee-text">
+                    <p>In our library, we have of cozy coffee shop, welcoming in customers with frothy cappuccinos and friendly conversation.
+                    <br>You can get a favorite book and read in coffee shop. Our barista to cook you best coffee, and also you can try desserts 
+                      <br>from bakery.</p>
+                </section>
+            </div>
+            <div class="coffee-menus-wrapper">
+                <nav class="coffee_menu" id="coffee-and-tea">
+                    <ul class="nav-menu-coffee">
+                        <span class="nav-list-headline">Coffee & Tea</span>
+                    <li class="nav-item-coffee">
+                        <span class="coffee-name">Cold Brew Coffee</span>
+                        <div class="dollar_sign">$</div>
+                        <span class="cofee-price">3</span>
+                    </li>
+                    <li class="nav-item-coffee">
+                        <span class="coffee-name">French Press Pot</span>
+                        <div class="dollar_sign">$</div>
+                        <span class="cofee-price">5</span>
+                    </li>
+                    <li class="nav-item-coffee">
+                        <span class="coffee-name">Espresso</span>
+                        <div class="dollar_sign">$</div>
+                        <span class="cofee-price">2</span>
+                    </li>
+                    <li class="nav-item-coffee">
+                        <span class="coffee-name">Cappuccino</span>
+                        <div class="dollar_sign">$</div>
+                        <span class="cofee-price">4</span>
+                    </li>
+                    <li class="nav-item-coffee">
+                        <span class="coffee-name">Hot tea</span>
+                        <div class="dollar_sign">$</div>
+                        <span class="cofee-price">2</span>
+                    <li class="nav-item-coffee">
+                        <span class="coffee-name">Cold tea</span>
+                        <div class="dollar_sign">$</div>
+                        <span class="cofee-price">2</span>
+                    </li>
+                </ul>
+            </nav>
+            <nav class="coffee_menu" id="deserts-and-cakes">
+                <ul class="nav-menu-deserts">
+                <span class="nav-list-headline">Desserts & Cakes</span>
+                <li class="nav-item-coffee">
+                    <span class="coffee-name">Forest Gateau</span>
+                    <div class="dollar_sign">$</div>
+                    <span class="cofee-price">16</span>
+                </li>
+                <li class="nav-item-coffee">
+                    <span class="coffee-name">Blue Moon</span>
+                    <div class="dollar_sign">$</div>
+                    <span class="cofee-price">16</span>
+                </li>
+                <li class="nav-item-coffee">
+                    <span class="coffee-name">Truffle Cake</span>
+                    <div class="dollar_sign">$</div>
+                    <span class="cofee-price">15</span>
+                </li>
+                <li class="nav-item-coffee">
+                    <span class="coffee-name">Chocolate Cake</span>
+                    <div class="dollar_sign">$</div>
+                    <span class="cofee-price">18</span>
+                </li>
+                <li class="nav-item-coffee">
+                    <span class="coffee-name">Poet’s Dream Cake</span>
+                    <div class="dollar_sign">$</div>
+                    <span class="cofee-price">16</span>
+                <li class="nav-item-coffee">
+                    <span class="coffee-name">Pineapple Cake</span>
+                    <div class="dollar_sign">$</div>
+                    <span class="cofee-price">14</span>
+                </li>
+            </ul>
+        </nav>
+        </div>
             </div>
     </main>
 </body>
