fix: margin of the menus in Coffee Section

--- a/index.html
+++ b/index.html
@@ -23,15 +23,15 @@
             </nav>
                 </div>
                 <div class="wrapper_icon">
-                    <section class="icon_profile"><img src="./assets/icon_profile.png" alt="Profile Icon"></section>
+                    <div class="icon_profile"><img src="./assets/icon_profile.png" alt="Profile Icon"></div>
                 </div>
             </div>
     </header>
     <main class="main">
         <div class ="wrapper_welcome">
-            <section class="welcome_img"><img src="./assets/Welcome_sec.png" alt="Library"></section>
+            <div class="welcome_img"><img src="./assets/Welcome_sec.png" alt="Library"></div>
             <div class ="background_container">
-                <section class="section" id="welcome-headline">Welcome<br> to the Brooklyn<br> Library</section>
+                <h2 class="section" id="welcome-headline">Welcome<br> to the Brooklyn<br> Library</h2>
             </div>
            </div>
            <div class ="about_welcome">
