feat: add Our Contacts section

--- a/index.html
+++ b/index.html
@@ -212,6 +212,20 @@
         </nav>
         </div>
             </div>
+            <div class ="our_contacts-headline-wrapper">
+                <section class="section_title" id="our_contacts"><h2>Our Contacts</h2></section>
+                </div>
+            <div class="our_contacts-content-wrapper">
+                <div class="contacts-data">
+                    <div class="contacts-data-headline">For all Library inquiries:</div>
+                    <div class="our_tel" id="first_tel"><span>Please call </span><a href="tel:617 730-2370">(617) 730-2370</a></div>
+                    <div class="our_tel" id="second_tel"><span>For TTY service, please call </span><a href="tel:(617) 730-2370">(617) 730-2370</a></div>
+                    <div class="our_tel" id="third_tel"><span>Putterham Library: </span><a href="tel:(617) 730-2385">(617) 730-2385</a></div>
+                    <div class="seniority">Senior Staff</div>
+                    <div class="our_mail"><span class="profession">Library Director: </span><a href="mailto:AmandaHirst@gmail.com">Amanda Hirst</a></div>
+                </div>
+                <div class="contact_map"><img src="./assets//Contacts_Map.png" alt="Map"></div>
+            </div>
     </main>
 </body>
 </html>
