fix: change margins/paddings and styles changes to match with mockup

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="icon" type="image/x-icon" href="assets/favicon/favicon.ico">
 </head>
 <body>
 
@@ -31,7 +32,7 @@
         <div class ="wrapper_welcome">
             <div class="welcome_img"><img src="./assets/Welcome_sec.png" alt="Library"></div>
             <div class ="background_container">
-                <h2 class="section" id="welcome-headline">Welcome<br> to the Brooklyn<br> Library</h2>
+                <p class="section" id="welcome-headline">Welcome<br> to the Brooklyn<br> Library</p>
             </div>
            </div>
            <div class ="about_welcome">
@@ -132,7 +133,7 @@
         <section class=book id="fourth_book"><img src="./assets/book_4.png" alt="The Last Queen"></section>
 </div>
             </div>
-            <div class ="coffee_wrapper">
+            <div class ="coffee_container">
                 <section class="section_title" id="coffee-headline"><h2>Coffee Shop</h2></section>
             <div class=coffee-text-wrapper>
                 <section class="coffee-text">
