feat: add footer

--- a/index.html
+++ b/index.html
@@ -275,4 +275,29 @@
         </div>
     </main>
 </body>
+<footer class="footer">
+    <div class="top-content_footer">
+        <div class=top-content-right-container>
+        <div class="address_footer">286 Cadman Plaza, New York, <br> NY 11238, United States</div>
+        <div class="footer_social-icons">
+            <div><img src="./assets/icons/Twitter (Footer).svg" alt="Twitter-logo"></div>
+            <div><img src="./assets/icons/Instagram (Footer).svg" alt="Instagram-logo"></div>
+            <div><img src="./assets/icons/Facebook (Footer).svg" alt="Facebook-logo"></div>
+        </div>
+    </div>
+    <div class="top-content-left-container">
+        <div class=schedule id="working-days-schedule">Mon - Fri<br>
+            08:00 am - 07:00 pm</div>
+        <div class=schedule id="weekend-days-schedule">Sat - Sun<br>
+            10:00 am - 06:00 pm</div>
+    </div>
+</div>
+<!-- <div class="white-line_footer"></div> -->
+<div class="low-content_footer">
+    <div class="year-of-creation">2023</div>
+    <div class="course-link"><a href="https://rs.school/js-stage0/">The Rolling Scopes School</a></div>
+    <div class="github-link"><a href="https://github.com/YehorTelehaQA?tab=repositories">YehorTelehaQA</a></div>
+    
+</div>
+</footer>
 </html>
