fix: delete extra section tags

--- a/index.html
+++ b/index.html
@@ -15,11 +15,11 @@
                 <section class="section" id="library-headline"><h1>Brooklyn Public Library</h1></section>
                 <nav class="nav">
                     <ul class="nav-list">
-                    <li class="nav-item"><a href="#about" class="nav-link">About</a></li>
-                    <li class="nav-item"><a href="#favorites" class="nav-link">Favorites</a></li>
-                    <li class="nav-item"><a href="#coffee-shop" class="nav-link">Coffee Shop</a></li>
-                    <li class="nav-item"><a href="#contacts" class="nav-link">Contacts</a></li>
-                    <li class="nav-item"><a href="#library-card" class="nav-link">Library Card</a></li>
+                    <li class="nav-item"><a href="#about-headline" class="nav-link">About</a></li>
+                    <li class="nav-item"><a href="#favorites-headline" class="nav-link">Favorites</a></li>
+                    <li class="nav-item"><a href="#coffee-headline" class="nav-link">Coffee Shop</a></li>
+                    <li class="nav-item"><a href="#our_contacts" class="nav-link">Contacts</a></li>
+                    <li class="nav-item"><a href="#library_digit-headline" class="nav-link">Library Card</a></li>
                 </ul>
             </nav>
                 </div>
@@ -38,11 +38,11 @@
            <div class ="about_welcome">
            <section class="section_title" id="about-headline"><h2>About</h2></section>
            </div>
-           <section class="about-text"><p>The Brooklyn Library is a free workspace, a large number of books and a cozy coffee shop inside </p></section>
+           <div class="about-text">The Brooklyn Library is a free workspace, a large number of books and a cozy coffee shop inside</div>
            <div class="about_images_wrapper">
-            <section class="icon_profile"><img src="./assets/image1_about.png" alt="Girl in Library"></section>
-            <section class="icon_profile"><img src="./assets/image2_about.png" alt="Profile Icon"></section>
-            <section class="icon_profile"><img src="./assets/image3_about.png" alt="Profile Icon"></section>
+            <div class="icon_profile"><img src="./assets/image1_about.png" alt="Girl in Library"></div>
+            <div class="icon_profile"><img src="./assets/image2_about.png" alt="Profile Icon"></div>
+            <div class="icon_profile"><img src="./assets/image3_about.png" alt="Profile Icon"></div>
            </div>
            <a class="wrapper_pagination">
             <div class="square_click-zone">
@@ -59,7 +59,7 @@
             <section class="section_title" id="favorites-headline"><h2>Favorites</h2></section>
             </div>
             <div class ="season_change">
-                <section class="select_text">Pick favorites of season</section>
+                <div class="select_text">Pick favorites of season</div>
             </div>
             <div class="radio-buttons">
                 <label class="radio-button">
@@ -81,66 +81,65 @@
                     <input class="radio-button__input" type="radio" name="season">
                     <span class="radio-button__label">Autumn</span>
                   </label>
-            </label>
             </div>
             <div class="books_container">
                 <div class ="books" id="first_book">
-                    <section class="card_headline" id="item">Staff Picks</section>
-                    <section class="book_author "id="item">
+                    <div class="card_headline" id="item">Staff Picks</div>
+                    <div class="book_author id="item">
                         <span class="book_name">The Book Eaters<br></span>
                         <span class="book_author">By Sunyi Dean</span>
-                    </section>
+                    </div>
                     <div class=text-wrapper>
-                        <section class="book_description"id="item">An unusual sci-fi story about a book eater woman who tries desperately to save her dangerous mind-eater son from tradition and certain death. Complete with dysfunctional family values, light Sapphic romance, and a strong, complex protagonist. Not for the faint of heart.</section>
+                        <div class="book_description"id="item">An unusual sci-fi story about a book eater woman who tries desperately to save her dangerous mind-eater son from tradition and certain death. Complete with dysfunctional family values, light Sapphic romance, and a strong, complex protagonist. Not for the faint of heart.</div>
                     </div>
                     <button class="buy-book_button" id="item">Buy</button>
-                    <section class=book id="first_book"><img src="./assets/book_1.png" alt="The Book Eaters"></section>
+                    <div class=book id="first_book"><img src="./assets/book_1.png" alt="The Book Eaters"></div>
             </div>
             <div class ="books" id="second_book">
-                <section class="card_headline" id="item">Staff Picks</section>
-                <section class="book_author "id="item">
+                <div class="card_headline" id="item">Staff Picks</div>
+                <div class="book_author "id="item">
                     <span class="book_name">Cackle<br></span>
                     <span class="book_author"> By Rachel Harrison</span>
-                </section>
+                </div>
                 <div class=text-wrapper>
-                    <section class="book_description"id="item">Are your Halloween movies of choice The Witches of Eastwick and Practical Magic? Look no further than here - where a woman recovering from a breakup moves to a quaint town in upstate New York and befriends a beautiful witch.</section>
+                    <div class="book_description"id="item">Are your Halloween movies of choice The Witches of Eastwick and Practical Magic? Look no further than here - where a woman recovering from a breakup moves to a quaint town in upstate New York and befriends a beautiful witch.</div>
                 </div>
                 <button class="buy-book_button" id="item">Buy</button>
-                <section class=book id="second_book"><img src="./assets/book_2.png" alt="Cackle"></section>
+                <div class=book id="second_book"><img src="./assets/book_2.png" alt="Cackle"></div>
         </div>
         <div class ="books" id="third_book">
-            <section class="card_headline" id="item">Staff Picks</section>
-            <section class="book_author "id="item">
+            <div class="card_headline" id="item">Staff Picks</div>
+            <div class="book_author "id="item">
                 <span class="book_name">Dante: Poet of the Secular World<br></span>
                 <span class="book_author">By Erich Auerbach</span>
-            </section>
+            </div>
             <div class=text-wrapper>
-                <section class="book_description"id="item">Auerbach's engaging book places the 'Comedy' within the tradition of epic, tragedy, and philosophy in general, arguing for Dante's uniqueness as one who raised the individual and his drama of soul into something of divine significance—an inspired introduction to Dante's main themes.</section>
+                <div class="book_description"id="item">Auerbach's engaging book places the 'Comedy' within the tradition of epic, tragedy, and philosophy in general, arguing for Dante's uniqueness as one who raised the individual and his drama of soul into something of divine significance—an inspired introduction to Dante's main themes.</div>
             </div>
             <button class="buy-book_button" id="item">Buy</button>
-            <section class=book id="third_book"><img src="./assets/book_3.png" alt="Dante: Poet of the Secular World"></section>
+            <div class=book id="third_book"><img src="./assets/book_3.png" alt="Dante: Poet of the Secular World"></div>
     </div>
     <div class ="books" id="fourth_book">
-        <section class="card_headline" id="item">Staff Picks</section>
-        <section class="book_author "id="item">
+        <div class="card_headline" id="item">Staff Picks</div>
+        <div class="book_author "id="item">
             <span class="book_name">The Last Queen<br></span>
             <span class="book_author">By Clive Irving</span>
-        </section>
+        </div>
         <div class=text-wrapper>
-            <section class="book_description"id="item">A timely and revelatory new biography of Queen Elizabeth (and her family) exploring how the Windsors have evolved and thrived as the modern world has changed around them.</section>
+            <div class="book_description"id="item">A timely and revelatory new biography of Queen Elizabeth (and her family) exploring how the Windsors have evolved and thrived as the modern world has changed around them.</section>
         </div>
         <button class="buy-book_button" id="item">Buy</button>
-        <section class=book id="fourth_book"><img src="./assets/book_4.png" alt="The Last Queen"></section>
+        <div class=book id="fourth_book"><img src="./assets/book_4.png" alt="The Last Queen"></div>
 </div>
             </div>
             <div class ="coffee_container">
                 <section class="section_title" id="coffee-headline"><h2>Coffee Shop</h2></section>
             <div class=coffee-text-wrapper>
-                <section class="coffee-text">
+                <div class="coffee-text">
                     <p>In our library, we have of cozy coffee shop, welcoming in customers with frothy cappuccinos and friendly conversation.
                     <br>You can get a favorite book and read in coffee shop. Our barista to cook you best coffee, and also you can try desserts 
                       <br>from bakery.</p>
-                </section>
+                </div>
             </div>
             <div class="coffee-menus-wrapper">
                 <nav class="coffee_menu" id="coffee-and-tea">
@@ -257,13 +256,13 @@
                 </div>
                 <div class="right-part-container">
                     <div class=reader_card>
-                        <section class="text-panel" id="first_text-reader-card">
+                        <div class="text-panel" id="first_text-reader-card">
                           <p>Get a reader card</p>
-                        </section>
+                        </div>
 
-                        <section class="text-panel" id="second_text-reader-card">
+                        <div class="text-panel" id="second_text-reader-card">
                          <p>You will be able to see a reader card after logging into account or you can register a new account</p>
-                        </section>
+                        </div>
 
                         <div class="reg_and_sign_buttons">
                           <button class="left-menu_button" id="sign_up">Sign Up</button>
