fix: change id's to unique

--- a/index.html
+++ b/index.html
@@ -83,53 +83,54 @@
                   </label>
             </div>
             <div class="books_container">
-                <div class ="books" id="first_book">
-                    <div class="card_headline" id="item">Staff Picks</div>
-                    <div class="book_author id="item">
+                <div class="books" id="first_book">
+                    <div class="book-item" id="card_headline">Staff Picks</div>
+                    <div class="book-item" id="book_author">
                         <span class="book_name">The Book Eaters<br></span>
                         <span class="book_author">By Sunyi Dean</span>
                     </div>
                     <div class=text-wrapper>
-                        <div class="book_description"id="item">An unusual sci-fi story about a book eater woman who tries desperately to save her dangerous mind-eater son from tradition and certain death. Complete with dysfunctional family values, light Sapphic romance, and a strong, complex protagonist. Not for the faint of heart.</div>
+                        <div class="book-item" id="book_description">An unusual sci-fi story about a book eater woman who tries desperately to save her dangerous mind-eater son from tradition and certain death. Complete with dysfunctional family values, light Sapphic romance, and a strong, complex protagonist. Not for the faint of heart.</div>
                     </div>
-                    <button class="buy-book_button" id="item">Buy</button>
-                    <div class=book id="first_book"><img src="./assets/book_1.png" alt="The Book Eaters"></div>
+                    <button class="book-item" id="buy-book_button">Buy</button>
+                    <div class=book id="first_book-image"><img src="./assets/book_1.png" alt="The Book Eaters"></div>
+            </div>
             </div>
             <div class ="books" id="second_book">
-                <div class="card_headline" id="item">Staff Picks</div>
-                <div class="book_author "id="item">
+                <div class="book-item" id="card_headline">Staff Picks</div>
+                <div class="book-item" id="book_author">
                     <span class="book_name">Cackle<br></span>
                     <span class="book_author"> By Rachel Harrison</span>
                 </div>
                 <div class=text-wrapper>
-                    <div class="book_description"id="item">Are your Halloween movies of choice The Witches of Eastwick and Practical Magic? Look no further than here - where a woman recovering from a breakup moves to a quaint town in upstate New York and befriends a beautiful witch.</div>
+                    <div class="book-item" id="book_description">Are your Halloween movies of choice The Witches of Eastwick and Practical Magic? Look no further than here - where a woman recovering from a breakup moves to a quaint town in upstate New York and befriends a beautiful witch.</div>
                 </div>
-                <button class="buy-book_button" id="item">Buy</button>
-                <div class=book id="second_book"><img src="./assets/book_2.png" alt="Cackle"></div>
+                <button class="book-item" id="buy-book_button">Buy</button>
+                <div class=book id="second_book-image"><img src="./assets/book_2.png" alt="Cackle"></div>
         </div>
         <div class ="books" id="third_book">
-            <div class="card_headline" id="item">Staff Picks</div>
-            <div class="book_author "id="item">
+            <div class="card_headline" id="card_headline">Staff Picks</div>
+            <div class="book_author "id="book_author">
                 <span class="book_name">Dante: Poet of the Secular World<br></span>
                 <span class="book_author">By Erich Auerbach</span>
             </div>
             <div class=text-wrapper>
-                <div class="book_description"id="item">Auerbach's engaging book places the 'Comedy' within the tradition of epic, tragedy, and philosophy in general, arguing for Dante's uniqueness as one who raised the individual and his drama of soul into something of divine significance—an inspired introduction to Dante's main themes.</div>
+                <div class="book-item" id="book_description">Auerbach's engaging book places the 'Comedy' within the tradition of epic, tragedy, and philosophy in general, arguing for Dante's uniqueness as one who raised the individual and his drama of soul into something of divine significance—an inspired introduction to Dante's main themes.</div>
             </div>
-            <button class="buy-book_button" id="item">Buy</button>
-            <div class=book id="third_book"><img src="./assets/book_3.png" alt="Dante: Poet of the Secular World"></div>
+            <button class="book-item" id="buy-book_button">Buy</button>
+            <div class=book id="third_book-image"><img src="./assets/book_3.png" alt="Dante: Poet of the Secular World"></div>
     </div>
     <div class ="books" id="fourth_book">
-        <div class="card_headline" id="item">Staff Picks</div>
-        <div class="book_author "id="item">
+        <div class="book-item" id="card_headline">Staff Picks</div>
+        <div class="book-item" id="book_author">
             <span class="book_name">The Last Queen<br></span>
             <span class="book_author">By Clive Irving</span>
         </div>
         <div class=text-wrapper>
-            <div class="book_description"id="item">A timely and revelatory new biography of Queen Elizabeth (and her family) exploring how the Windsors have evolved and thrived as the modern world has changed around them.</section>
+            <div class="book_description"id="book_description">A timely and revelatory new biography of Queen Elizabeth (and her family) exploring how the Windsors have evolved and thrived as the modern world has changed around them.</section>
         </div>
-        <button class="buy-book_button" id="item">Buy</button>
-        <div class=book id="fourth_book"><img src="./assets/book_4.png" alt="The Last Queen"></div>
+        <button class="book-item" id="buy-book_button">Buy</button>
+        <div class=book id="fourth_book-image"><img src="./assets/book_4.png" alt="The Last Queen"></div>
 </div>
             </div>
             <div class ="coffee_container">
@@ -144,7 +145,7 @@
             <div class="coffee-menus-wrapper">
                 <nav class="coffee_menu" id="coffee-and-tea">
                     <ul class="nav-menu-coffee">
-                        <span class="nav-list-headline">Coffee & Tea</span>
+                        <div class="nav-list-headline">Coffee & Tea</div>
                     <li class="nav-item-coffee">
                         <span class="coffee-name">Cold Brew Coffee</span>
                         <div class="dollar_sign">$</div>
@@ -178,7 +179,7 @@
             </nav>
             <nav class="coffee_menu" id="deserts-and-cakes">
                 <ul class="nav-menu-deserts">
-                <span class="nav-list-headline">Desserts & Cakes</span>
+                <div class="nav-list-headline">Desserts & Cakes</div>
                 <li class="nav-item-coffee">
                     <span class="coffee-name">Forest Gateau</span>
                     <div class="dollar_sign">$</div>
@@ -218,9 +219,9 @@
             <div class="our_contacts-content-wrapper">
                 <div class="contacts-data">
                     <div class="contacts-data-headline">For all Library inquiries:</div>
-                    <div class="our_tel" id="first_tel"><span>Please call </span><a href="tel:617 730-2370">(617) 730-2370</a></div>
-                    <div class="our_tel" id="second_tel"><span>For TTY service, please call </span><a href="tel:(617) 730-2370">(617) 730-2370</a></div>
-                    <div class="our_tel" id="third_tel"><span>Putterham Library: </span><a href="tel:(617) 730-2385">(617) 730-2385</a></div>
+                    <div class="our_tel" id="first_tel"><span>Please call </span><a href="tel:617 730-2370">(617)&nbsp;730-2370</a></div>
+                    <div class="our_tel" id="second_tel"><span>For TTY service, please call </span><a href="tel:(617)&nbsp;730-2370">(617) 730-2370</a></div>
+                    <div class="our_tel" id="third_tel"><span>Putterham Library: </span><a href="tel:(617)&nbsp;730-2385">(617) 730-2385</a></div>
                     <div class="seniority">Senior Staff</div>
                     <div class="our_mail"><span class="profession">Library Director: </span><a href="mailto:AmandaHirst@gmail.com">Amanda Hirst</a></div>
                 </div>
