fix: wron placement of the div inside ul

--- a/index.html
+++ b/index.html
@@ -147,12 +147,12 @@
             <div class="coffee-menus-wrapper">
                 <nav class="coffee_menu" id="coffee-and-tea">
                     <ul class="nav-menu-coffee">
-                        <div class="nav-list-headline">Coffee & Tea</div>
-                    <li class="nav-item-coffee">
-                        <span class="coffee-name">Cold Brew Coffee</span>
-                        <div class="dollar_sign">$</div>
-                        <span class="cofee-price">3</span>
-                    </li>
+                        <li class="nav-list-headline">Coffee & Tea</li>
+                        <li class="nav-item-coffee">
+                            <span class="coffee-name">Cold Brew Coffee</span>
+                            <div class="dollar_sign">$</div>
+                            <span class="coffee-price">3</span>
+                        </li>
                     <li class="nav-item-coffee">
                         <span class="coffee-name">French Press Pot</span>
                         <div class="dollar_sign">$</div>
@@ -181,7 +181,7 @@
             </nav>
             <nav class="coffee_menu" id="deserts-and-cakes">
                 <ul class="nav-menu-deserts">
-                <div class="nav-list-headline">Desserts & Cakes</div>
+                <li class="nav-list-headline">Desserts & Cakes</li>
                 <li class="nav-item-coffee">
                     <span class="coffee-name">Forest Gateau</span>
                     <div class="dollar_sign">$</div>
@@ -280,25 +280,25 @@
 <footer class="footer">
     <div class="top-content_footer">
         <div class=top-content-right-container>
-        <div class="address_footer">286 Cadman Plaza, New York, <br> NY 11238, United States</div>
-        <div class="footer_social-icons">
-            <div><img src="./assets/icons/Twitter(Footer).svg" alt="Twitter-logo"></div>
-            <div><img src="./assets/icons/Instagram(Footer).svg" alt="Instagram-logo"></div>
-            <div><img src="./assets/icons/Facebook(Footer).svg" alt="Facebook-logo"></div>
+            <div class="address_footer">286 Cadman Plaza, New York, <br> NY 11238, United States</div>
+            <div class="footer_social-icons">
+                <div><img src="./assets/icons/Twitter(Footer).svg" alt="Twitter-logo"></div>
+                <div><img src="./assets/icons/Instagram(Footer).svg" alt="Instagram-logo"></div>
+                <div><img src="./assets/icons/Facebook(Footer).svg" alt="Facebook-logo"></div>
+            </div>
+        </div>
+        <div class="top-content-left-container">
+            <div class="schedule" id="working-days-schedule">Mon - Fri<br>
+                08:00 am - 07:00 pm</div>
+            <div class="schedule" id="weekend-days-schedule">Sat - Sun<br>
+                10:00 am - 06:00 pm</div>
         </div>
     </div>
-    <div class="top-content-left-container">
-        <div class=schedule id="working-days-schedule">Mon - Fri<br>
-            08:00 am - 07:00 pm</div>
-        <div class=schedule id="weekend-days-schedule">Sat - Sun<br>
-            10:00 am - 06:00 pm</div>
+    <div class="low-content_footer">
+        <div class="year-of-creation">2023</div>
+        <div class="course-link"><a href="https://rs.school/js-stage0/">The Rolling Scopes School</a></div>
+        <div class="github-link"><a href="https://github.com/YehorTelehaQA?tab=repositories">YehorTelehaQA</a></div>
     </div>
-</div>
-<div class="low-content_footer">
-    <div class="year-of-creation">2023</div>
-    <div class="course-link"><a href="https://rs.school/js-stage0/">The Rolling Scopes School</a></div>
-    <div class="github-link"><a href="https://github.com/YehorTelehaQA?tab=repositories">YehorTelehaQA</a></div>
-    
-</div>
 </footer>
+</body>
 </html>
