fix: solve problem with stray footer

--- a/index.html
+++ b/index.html
@@ -277,7 +277,7 @@
         </div>
     </main>
 </body>
-<footer class="footer">
+<footer class="footer_container">
     <div class="top-content_footer">
         <div class=top-content-right-container>
             <div class="address_footer">286 Cadman Plaza, New York, <br> NY 11238, United States</div>
