feat: add links to the social media

--- a/index.html
+++ b/index.html
@@ -281,11 +281,11 @@
     <div class="top-content_footer">
         <div class=top-content-right-container>
             <div class="address_footer">286 Cadman Plaza, New York, <br> NY 11238, United States</div>
-            <div class="footer_social-icons">
-                <div><img src="./assets/icons/Twitter(Footer).svg" alt="Twitter-logo"></div>
-                <div><img src="./assets/icons/Instagram(Footer).svg" alt="Instagram-logo"></div>
-                <div><img src="./assets/icons/Facebook(Footer).svg" alt="Facebook-logo"></div>
-            </div>
+            <ul class="footer_social-icons">
+                <li><a href="https://twitter.com/"><img src="./assets/icons/Twitter(Footer).svg" alt="Twitter-logo"></a></li>
+                <li><a href="https://www.instagram.com/"><img src="./assets/icons/Instagram(Footer).svg" alt="Instagram-logo"></a></li>
+                <li><a href="https://www.facebook.com/"><img src="./assets/icons/Facebook(Footer).svg" alt="Facebook-logo"></a></li>
+            </ul>
         </div>
         <div class="top-content-left-container">
             <div class="schedule" id="working-days-schedule">Mon - Fri<br>
