--- a/index.html
+++ b/index.html
@@ -300,5 +300,8 @@
         <div class="github-link"><a href="https://github.com/YehorTelehaQA?tab=repositories">YehorTelehaQA</a></div>
     </div>
 </footer>
+<script>
+    console.log("Баллы за работу: 96")
+</script>
 </body>
 </html>
