fix: elements styles

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
            </div>
            <a class="wrapper_pagination">
             <div class="square_click-zone">
-            <div class="slide_pagination"></div>
+            <div class="slide_pagination-active"></div>
         </div>
         <div class="square_click-zone">
             <div class="slide_pagination"></div>
@@ -129,7 +129,7 @@
         <div class=text-wrapper>
             <div class="book_description">A timely and revelatory new biography of Queen Elizabeth (and her family) exploring how the Windsors have evolved and thrived as the modern world has changed around them.</div>
         </div>
-        <button class="buy-book_button">Buy</button>
+        <button class="buy-book_button-own" disabled>Own</button>
         <div class=book id="fourth_book-image"><img src="./assets/book_4.png" alt="The Last Queen"></div>
     </div>
             </div>
